Fix modal contact on mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -499,6 +499,7 @@ footer{text-align: center;
   input{width: 100%; max-width: 300px; display: block; text-align: left; border: 0; line-height: 40px; height: 40px; background: #e8faff; margin: 0 auto 10px auto; padding: 20px;}
   textarea{width: 100%; max-width: 300px; height: 200px; display: block; text-align: left; background: #e8faff; border: 0; margin: 0 auto; padding: 20px;}
 }
+.modal-body{max-height: 500px; overflow: auto;}
 
 #theprofile{
   button{float: left; position: relative; padding: 0 25px; height: 56px; line-height: 56px; color: white; background: $blue; font-size: 18px; font-weight: 700; margin: 0;}
